--- a/app.json
+++ b/app.json
@@ -14,6 +14,12 @@
     "ios": {
       "supportsTablet": true
     },
+    
+      "reactNative": {
+        "hermesEnabled": false
+      
+    },
+    
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
